Changed license to MIT

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "OLOO"
   ],
   "author": "Henrique Barcelos <rick.hjpbarcelos@gmail.com>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/hbarcelos/speckoloo/issues"
   },
