--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
   ],
   "plugins": [
     "transform-object-rest-spread",
+    "transform-object-entries",
     "istanbul"
   ],
   "sourceMaps": "inline"
