--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Domain entites inspired by Speck",
   "main": "dist/index.js",
   "scripts": {
-    "test": "ava",
-    "test:watch": "ava --watch",
     "build": "babel src/ -d dist/",
+    "clean": "find ./dist -maxdepth 1 -exec rm -rf {} +",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src/",
     "nyc": "nyc",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "prepublish": "(not-in-publish && echo 'Skipping prepublish') || npm run require-npm4-to-publish",
-    "require-npm4-to-publish": "semver -r '>=4.0.0' $(npm --version) || (echo 'NPM 4+ required to publish' && exit 1)",
-
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test && npm run lint"
+    "prepublish": "(not-in-publish && echo 'Skipping prepublish') || npm run require-npm4-to-publish",
+    "prepublishOnly": "npm run test && npm run lint",
+    "require-npm4-to-publish": "semver -r '>=4.0.0' $(npm --version) || (echo 'NPM 4+ required to publish' && exit 1)",
+    "test": "ava",
+    "test:watch": "ava --watch"
   },
   "repository": {
     "type": "git",
