Added Contributing section to README

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "find ./dist -maxdepth 1 -exec rm -rf {} +",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src/",
-    "nyc": "nyc",
+    "coverage-report": "nyc report",
     "prepare": "npm run build",
     "prepublish": "(not-in-publish && echo 'Skipping prepublish') || npm run require-npm4-to-publish",
     "require-npm4-to-publish": "semver -r '>=4.0.0' $(npm --version) || (echo 'NPM 4+ required to publish' && exit 1)",
