Fixed publishing steps

--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Domain entites inspired by Speck",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/ -d dist/",
+    "build": "npm run clean && babel src/ -d dist/",
     "clean": "find ./dist -maxdepth 1 -exec rm -rf {} +",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src/",
     "coverage-report": "nyc report",
     "postinstall": "npm run build",
-    "prepare": "npm run build",
+    "postversion": "git push && git push --tags",
     "prepublish": "(not-in-publish && echo 'Skipping prepublish') || npm run require-npm4-to-publish",
-    "prepublishOnly": "npm run test && npm run build",
+    "prepublishOnly": "npm run build",
+    "preversion": "npm run test",
     "require-npm4-to-publish": "semver -r '>=4.0.0' $(npm --version) || (echo 'NPM 4+ required to publish' && exit 1)",
     "test": "ava src/**/*.test.js test/",
     "test:watch": "npm run test -- --watch"
