--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postversion": "git push && git push --tags",
     "prepublish": "(not-in-publish && echo 'Skipping prepublish') || npm run require-npm4-to-publish",
     "prepublishOnly": "npm run build",
-    "preversion": "npm run lint && npm run test",
+    "preversion": "npm run build && npm run lint && npm run test",
     "require-npm4-to-publish": "semver -r '>=4.0.0' $(npm --version) || (echo 'NPM 4+ required to publish' && exit 1)",
     "test": "ava",
     "test:watch": "ava --watch"
