--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
-    "build": "npm run clean && babel src/ -d dist/",
+    "build": "babel src/ -d dist/",
     "clean": "find ./dist -maxdepth 1 -exec rm -rf {} +",
     "coverage": "nyc npm test",
     "coverage:report": "nyc report --reporter=text-lcov | coveralls",
