--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-transform-object-entries": "^1.0.0",
+    "babel-plugin-transform-es2017-object-entries": "0.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.24.1",
